// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SearchInputBar > SearchInputBar - Snapshots > matches snapshot - default state 1`] = `
<div
  class="relative flex h-12 min-w-0 items-center gap-3 border border-border px-6 py-3 rounded-full"
  data-cy="header-search"
  data-testid="search-input-bar"
  style="background: linear-gradient(180deg, rgb(7, 4, 10) 0%, rgb(27, 24, 32) 100%); backdrop-filter: blur(20px);"
>
  <input
    aria-autocomplete="list"
    aria-expanded="false"
    aria-label="Search input"
    class="h-auto flex-1 border-none bg-transparent pr-0 text-base font-medium text-foreground md:text-base min-w-20 pl-0"
    data-cy="header-search-input"
    placeholder="Search"
    type="text"
    value=""
  />
  <svg
    aria-hidden="true"
    class="lucide lucide-search pointer-events-none size-4 shrink-0 text-muted-foreground"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m21 21-4.34-4.34"
    />
    <circle
      cx="11"
      cy="11"
      r="8"
    />
  </svg>
</div>
`;

exports[`SearchInputBar > SearchInputBar - Snapshots > matches snapshot - focused state 1`] = `
<div
  class="relative flex h-12 min-w-0 items-center gap-3 border border-border px-6 py-3 rounded-t-2xl rounded-b-none border-b-transparent"
  data-cy="header-search"
  data-testid="search-input-bar"
  style="background: linear-gradient(180deg, var(--background) 0%, var(--background) 100%);"
>
  <input
    aria-autocomplete="list"
    aria-expanded="false"
    aria-label="Search input"
    class="h-auto flex-1 border-none bg-transparent pr-0 text-base font-medium text-foreground md:text-base min-w-20 pl-0"
    data-cy="header-search-input"
    placeholder="Search"
    type="text"
    value=""
  />
  <svg
    aria-hidden="true"
    class="lucide lucide-search pointer-events-none size-4 shrink-0 text-muted-foreground"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m21 21-4.34-4.34"
    />
    <circle
      cx="11"
      cy="11"
      r="8"
    />
  </svg>
</div>
`;

exports[`SearchInputBar > SearchInputBar - Snapshots > matches snapshot - with active tags 1`] = `
<div
  class="relative flex h-12 min-w-0 items-center gap-3 border border-border px-6 py-3 rounded-full"
  data-cy="header-search"
  data-testid="search-input-bar"
  style="background: linear-gradient(180deg, rgb(7, 4, 10) 0%, rgb(27, 24, 32) 100%); backdrop-filter: blur(20px);"
>
  <div
    aria-label="Active search tags"
    class="flex min-w-0 items-center gap-2.5 overflow-x-auto py-2"
    role="list"
  >
    <span
      data-testid="active-tag-bitcoin"
    >
      bitcoin
      <button
        data-testid="remove-tag-bitcoin"
      >
        x
      </button>
    </span>
    <span
      data-testid="active-tag-pubky"
    >
      pubky
      <button
        data-testid="remove-tag-pubky"
      >
        x
      </button>
    </span>
  </div>
  <input
    aria-autocomplete="list"
    aria-expanded="false"
    aria-label="Search input"
    class="h-auto flex-1 border-none bg-transparent pr-0 text-base font-medium text-foreground md:text-base min-w-8 pl-2.5"
    data-cy="header-search-input"
    placeholder=""
    type="text"
    value=""
  />
  <svg
    aria-hidden="true"
    class="lucide lucide-search pointer-events-none size-4 shrink-0 text-muted-foreground"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m21 21-4.34-4.34"
    />
    <circle
      cx="11"
      cy="11"
      r="8"
    />
  </svg>
</div>
`;

exports[`SearchInputBar > SearchInputBar - Snapshots > matches snapshot - with input value 1`] = `
<div
  class="relative flex h-12 min-w-0 items-center gap-3 border border-border px-6 py-3 rounded-full"
  data-cy="header-search"
  data-testid="search-input-bar"
  style="background: linear-gradient(180deg, rgb(7, 4, 10) 0%, rgb(27, 24, 32) 100%); backdrop-filter: blur(20px);"
>
  <input
    aria-autocomplete="list"
    aria-expanded="false"
    aria-label="Search input"
    class="h-auto flex-1 border-none bg-transparent pr-0 text-base font-medium text-foreground md:text-base min-w-20 pl-0"
    data-cy="header-search-input"
    placeholder="Search"
    type="text"
    value="test query"
  />
  <svg
    aria-hidden="true"
    class="lucide lucide-search pointer-events-none size-4 shrink-0 text-muted-foreground"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m21 21-4.34-4.34"
    />
    <circle
      cx="11"
      cy="11"
      r="8"
    />
  </svg>
</div>
`;
